<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent" android:orientation="vertical" android:gravity="center">

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:src="@mipmap/ic_launcher_round"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:layout_marginTop="@dimen/dp_10">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/userlayout"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter Username"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passlayout"
            android:layout_below="@id/userlayout"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter Password"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgotPass"
            android:layout_below="@id/passlayout"
            android:layout_alignParentEnd="true"
            android:paddingRight="@dimen/dp_30"/>

        <com.vsshv.doitlater.mvp.ui.common.CustomButton
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/white"
            android:background="@drawable/btn_selector"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_below="@id/forgot"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_30"
            android:textSize="@dimen/sp_15"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            android:layout_below="@id/login"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_15">
        </View>
        <TextView
            android:id="@+id/orTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:layout_below="@id/login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/orTxt"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_30">

        <info.hoang8f.widget.FButton
            android:id="@+id/fb"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            fbutton:buttonColor="@color/fb"
            fbutton:shadowColor="@color/fb"
            fbutton:shadowEnabled="true"
            fbutton:shadowHeight="5dp"
            fbutton:cornerRadius="30dp"
            android:text="@string/fb"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_15"
            android:drawableLeft="@mipmap/ic_fb_sign"
            android:paddingRight="@dimen/dp_25"/>

        <info.hoang8f.widget.FButton
            android:id="@+id/gmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            fbutton:buttonColor="@color/google"
            fbutton:shadowColor="@color/google"
            fbutton:shadowEnabled="true"
            fbutton:shadowHeight="5dp"
            fbutton:cornerRadius="30dp"
            android:text="@string/google"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_15"
            android:layout_toRightOf="@id/fb"
            android:layout_marginLeft="@dimen/dp_10"
            android:drawableLeft="@mipmap/ic_google_sign"
            android:paddingRight="@dimen/dp_25"/>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>